fix no region error upon pytest
