# dylan_cookiecutter_exercise/handler.py
@@ -140,15 +140,17 @@ def get_item(event: ItemModel, context: LambdaContext) -> dict:
             "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
             "body": ErrorsBody(errors=[error_context]).json(),
         }
+
     return response
+
 
 # pylint: disable=no-value-for-parameter
 @export_trace(export_service=ExportService.OTEL_COLLECTOR_LAYER)
 @join_trace(event_source=EventSource.API_GATEWAY_REQUEST)
 @event_parser(model=ItemModel)
-def update_item(event: ItemModel, context: LambdaContext) -> dict:
+def edit_item(event: ItemModel, context: LambdaContext) -> dict:
     """
-    Update item
+    Edit item
 
     :param event: event with data to process
     :param context: lambda execution context
@@ -157,16 +159,18 @@ def update_item(event: ItemModel, context: LambdaContext) -> dict:
     logger.info(f"Context: {context}")
 
     identity = get_identity_from_event(event=event.dict(), verify=False)
+    path_parameters = ItemIdPathParam.validate(event.pathParameters)
+    item_id = path_parameters.item_id
     tenant_id = identity.tenant
     item_data = event.body.dict()
     request_id = event.requestContext.requestId
 
     # Database served as dependency injection here, so it will be easier to test this or mock it base on level 0
     service = Service(Db(), tenant_id, identity.sub)
-    logger.info(f"Creating Item {item_data}")
+    logger.info(f"Editing Item {item_data}")
     logger.info(f"With Tenant Context: [{tenant_id}]")
     try:
-        item = service.create_item(item=item_data)
+        item = service.edit_item(item_id=item_id, item=item_data)
         response = {
             "statusCode": HTTPStatus.OK,
             "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
@@ -185,6 +189,19 @@ def update_item(event: ItemModel, context: LambdaContext) -> dict:
             "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
             "body": ErrorsBody(errors=[error_context]).json(),
         }
+    except ItemNotFound as error:
+        error_context = {
+            "id": request_id,
+            "code": error.code,
+            "title": error.title,
+            "detail": error.msg,
+            "status": "404",
+        }
+        response = {
+            "statusCode": HTTPStatus.NOT_FOUND,
+            "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
+            "body": ErrorsBody(errors=[error_context]).json(),
+        }
     except ClientError as error:
         error_context = {
             "id": request_id,
@@ -198,4 +215,65 @@ def update_item(event: ItemModel, context: LambdaContext) -> dict:
             "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
             "body": ErrorsBody(errors=[error_context]).json(),
         }
+    return response
+
+
+# pylint: disable=no-value-for-parameter
+@export_trace(export_service=ExportService.OTEL_COLLECTOR_LAYER)
+@join_trace(event_source=EventSource.API_GATEWAY_REQUEST)
+@event_parser(model=ItemModel)
+def delete_item(event: ItemModel, context: LambdaContext) -> dict:
+    """
+    Delete an item
+
+    :param event: event with data to process
+    :param context: lambda execution context
+    """
+    logger.info(f"Event: {event}")
+    logger.info(f"Context: {context}")
+    identity = get_identity_from_event(event=event.dict(), verify=False)
+    path_parameters = ItemIdPathParam.validate(event.pathParameters)
+    item_id = path_parameters.item_id
+    tenant_id = identity.tenant
+    request_id = event.requestContext.requestId
+
+    logger.info(f"Getting Item: [{item_id}]")
+    logger.info(f"With Tenant Context: [{tenant_id}]")
+
+    # Database served as dependency injection here, so it will be easier to test this or mock it base on level 0
+    service = Service(Db(), tenant_id, identity.sub)
+    try:
+        existing_item = service.delete_item(item_id=item_id)
+        response = {
+            "statusCode": HTTPStatus.OK,
+            "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
+            "body": Item(**existing_item).json(),
+        }
+    except ItemNotFound as error:
+        error_context = {
+            "id": request_id,
+            "code": error.code,
+            "title": error.title,
+            "detail": error.msg,
+            "status": "404",
+        }
+        response = {
+            "statusCode": HTTPStatus.NOT_FOUND,
+            "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
+            "body": ErrorsBody(errors=[error_context]).json(),
+        }
+    except ClientError as error:
+        error_context = {
+            "id": request_id,
+            "code": 400,
+            "title": "Unknown error",
+            "detail": error.args[0],
+            "status": "400",
+        }
+        response = {
+            "statusCode": HTTPStatus.BAD_REQUEST,
+            "headers": Headers(content_type="application/vnd.api+json").dict(by_alias=True),
+            "body": ErrorsBody(errors=[error_context]).json(),
+        }
+
     return response
