# openapi.yaml
@@ -56,7 +56,7 @@ paths:
         httpMethod: POST
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${CreateItem.Arn}:live/invocations
-  
+
   '/items/{item_id}':
     get:
       operationId: item_id
@@ -82,14 +82,14 @@ paths:
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetItem.Arn}:live/invocations
     put:
-      operationId: item_id
-      summary: Update Item
-      description: Update details for an Item
+      operationId: item_id_put
+      summary: Edit Item
+      description: Edit details for an Item
       parameters:
         - $ref: '#/components/parameters/item_id'
       responses:
         '200':
-          $ref: '#/components/responses/UpdateItemResponse'
+          $ref: '#/components/responses/EditItemResponse'
         '400':
           $ref: '#/components/responses/400BadRequestErrorResponse'
         '404':
@@ -103,9 +103,9 @@ paths:
         httpMethod: POST
         passthroughBehavior: when_no_match
         uri:
-          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${UpdateItem.Arn}:live/invocations
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${EditItem.Arn}:live/invocations
     delete:
-      operationId: item_id
+      operationId: item_id_delete
       summary: Delete Item
       description: Delete an Item
       parameters:
@@ -127,8 +127,6 @@ paths:
         passthroughBehavior: when_no_match
         uri:
           Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${DeleteItem.Arn}:live/invocations
-
-
 components:
   parameters:
     item_id:
@@ -157,8 +155,8 @@ components:
                 type: object
               meta:
                 type: object
-    UpdateItemResponse:
-      description: Update an Item
+    EditItemResponse:
+      description: Edit an Item
       content:
         application/vnd.api+json:
           schema:
